@@ -13,6 +13,10 @@
 * Fixed yet another bug that caused a disconnected tree when html5lib
   copied an element from one part of the tree to another. [bug=1270611]
 
+* __repr__ now returns an ASCII bytestring in Python 2, and a Unicode
+  string in Python 3, instead of a UTF8-encoded bytestring in both
+  versions. [bug=1420131]
+
 * The select() method now supports selector grouping. Patch by
   Francisco Canas [bug=1191917]
 
